--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -3,11 +3,11 @@
 <head>
   <title>研论网 - 发布</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <script src="js/jquery-3.6.3.js"></script>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="css/community.css">
-  <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="/css/community.css">
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/jquery-3.6.3.js"></script>
 
 </head>
 <body class="body">
@@ -18,13 +18,14 @@
       <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
       <hr/>
       <form action="/publish" method="post">
+        <input type="hidden" name="id" th:value="${id}">
         <div class="form-group">
           <label for="title">问题标题（简单扼要）：</label>
           <input type="text" class="form-control" th:value="${title}" id="title" name="title" placeholder="问题标题...">
         </div>
         <div class="form-group">
           <label for="description">问题补充（必填，请参考右侧提示）：</label>
-          <textarea name="description" th:value="${description}" id="description" class="form-control" cols="30" rows="10"></textarea>
+          <textarea name="description" th:text="${description}" id="description" class="form-control" cols="30" rows="10"></textarea>
         </div>
         <div>
           <label for="tag">添加标签：</label>
