--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title th:text="${sectionName}"></title>
+  <title th:text="${question.title}"></title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <script src="/js/jquery-3.6.3.js"></script>
   <script src="/js/bootstrap.min.js"></script>
@@ -19,57 +19,36 @@
 <div class="container-fluid main">
   <div class="row">
     <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-      <h2 class="text-bigfont"><span th:text="${sectionName}"></span></h2>
+      <h4 class="text-bigfont"><span th:text="${question.title}"></span></h4>
+      <span class="text-color-999">
+        作者：<span th:text="${question.user.name}"></span> |
+        发布时间：<span th:text="${#dates.format(question.gmtCreate,'YYYY-MM-dd HH:mm')}"></span> |
+        阅读数：<span th:text="${question.viewCount}"></span>
+      </span>
       <hr>
-      <div class="media" th:each="question:${pagination.questions}">
-        <div class="media-left">
-          <a href="#">
-            <img alt="头像" class="media-object small-picture img-rounded" th:src="${question.user.avatarUrl}">
-          </a>
-        </div>
-        <div class="media-body">
-          <h4 class="media-heading" th:text="${question.title}"></h4>
-          <span class="text-color-999"><span th:text="${question.commentCount}"></span>个回复 · <span th:text="${question.viewCount}"></span>次浏览 · <span th:text="${#dates.format(question.gmtCreate,'YYYY-MM-dd HH:mm')}"></span></span>
-        </div>
-      </div>
-      <nav aria-label="Page navigation">
-        <ul class="pagination">
-          <li th:if="${pagination.showFirstPage}">
-            <a th:href="@{'/profile/'+${section}(page=${1})}" aria-label="FirstPage">
-              <span aria-hidden="true">&lt;&lt;</span>
-            </a>
-          </li>
-          <li th:if="${pagination.showPrevious}">
-            <a th:href="@{'/profile/'+${section}(page=${pagination.page - 1})}" aria-label="Previous">
-              <span aria-hidden="true">&lt;</span>
-            </a>
-          </li>
-          <li th:each="page:${pagination.pages}" th:class="${pagination.page == page}? 'active' : ''">
-            <a th:href="@{'/profile/'+${section}(page=${page})}" th:text="${page}">
-            </a>
-          </li>
-          <li th:if="${pagination.showNext}">
-            <a th:href="@{'/profile/'+${section}(page=${pagination.page + 1})}" aria-label="Next">
-              <span aria-hidden="true">&gt;</span>
-            </a>
-          </li>
-          <li th:if="${pagination.showEndPage}">
-            <a th:href="@{'/profile/'+${section}(page=${pagination.totalPage})}" aria-label="Next">
-              <span aria-hidden="true">&gt;&gt;</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
+      <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <a th:href="@{'/publish/'+${question.id}}" class="text-color-999" th:if="${session.user != null && session.user.id == question.creator}">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>  编辑</a>
     </div>
     <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-      <div class="list-group section">
-        <a href="/profile/questions" th:class="${section == 'questions'}? 'active list-group-item' : 'list-group-item'">
-          我的提问
-        </a>
-        <a href="/profile/replies" th:class="${section == 'replies'}? 'active list-group-item' : 'list-group-item'">
-          最新回复
-          <span class="badge">14</span>
-        </a>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <h4>发起人</h4>
+        <div class="media">
+          <div class="media-left">
+            <a href="#">
+              <img class="media-object small-picture img-circle" th:src="${question.user.avatarUrl}">
+            </a>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">
+              <span th:text="${question.user.name}"></span>
+            </h4>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <h4>相关问题</h4>
       </div>
     </div>
   </div>
