--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -1,57 +1,120 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title th:text="${question.title}"></title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <script src="/js/jquery-3.6.3.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="/css/picture.css">
-  <link rel="stylesheet" href="/css/text.css">
-  <link rel="stylesheet" href="/css/community.css">
-  <link rel="stylesheet" href="/css/profile.css">
-
+    <title th:text="${question.title}"></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <script src="/js/jquery-3.6.3.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/picture.css">
+    <link rel="stylesheet" href="/css/text.css">
+    <link rel="stylesheet" href="/css/community.css">
+    <link rel="stylesheet" href="/css/profile.css">
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/community.js"></script>
 
 </head>
 <body class="body">
 <div th:insert="~{navigation :: nav}"></div>
 <div class="container-fluid main">
-  <div class="row">
-    <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-      <h4 class="text-bigfont"><span th:text="${question.title}"></span></h4>
-      <span class="text-color-999">
+    <div class="row">
+
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <!--问题详情-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4 class="text-bigfont"><span th:text="${question.title}"></span></h4>
+                <span class="text-color-999">
         作者：<span th:text="${question.user.name}"></span> |
         发布时间：<span th:text="${#dates.format(question.gmtCreate,'YYYY-MM-dd HH:mm')}"></span> |
         阅读数：<span th:text="${question.viewCount}"></span>
       </span>
-      <hr>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
-      <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <a th:href="@{'/publish/'+${question.id}}" class="text-color-999" th:if="${session.user != null && session.user.id == question.creator}">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>  编辑</a>
-    </div>
-    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <h4>发起人</h4>
-        <div class="media">
-          <div class="media-left">
-            <a href="#">
-              <img class="media-object small-picture img-circle" th:src="${question.user.avatarUrl}">
-            </a>
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">
-              <span th:text="${question.user.name}"></span>
-            </h4>
-          </div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-question"
+                     th:text="${question.description}"></div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hr-bottom">
+            </div>
+            <a th:href="@{'/publish/'+${question.id}}" class="text-color-999 question-edit"
+               th:if="${session.user != null && session.user.id == question.creator}">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 编辑</a>
+
+            <!--回复列表-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4 class="comment-replies">
+                    <span th:text="${question.commentCount}"></span> 个回复
+                </h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments" th:each="comment : ${comments}">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object small-picture img-rounded" th:src="${comment.user.avatarUrl}">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">
+                                <span th:text="${comment.user.name}"></span>
+                            </h4>
+                            <div th:text="${comment.content}"></div>
+                            <div class="menu">
+                                <span class="glyphicon glyphicon-thumbs-up icon-comment"></span>
+                                <span class="glyphicon glyphicon-thumbs-down icon-comment"></span>
+                                <span class="glyphicon glyphicon-comment icon-comment"></span>
+                                <span class="pull-right"
+                                      th:text="${#dates.format(comment.gmtCreate,'YYYY-MM-dd')}"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!--回复文本域-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h3><span class="glyphicon glyphicon-text-size question-edit" aria-hidden="true"></span> 回复</h3>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object small-picture img-rounded" th:src="${question.user.avatarUrl}">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">
+                                <span th:text="${question.user.name}"></span>
+                            </h4>
+                        </div>
+                    </div>
+                    <input type="hidden" id="question_id" th:value="${question.id}">
+                    <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <button type="submit" class=" btn btn-success btn-comment" onclick="post()">回复</button>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <h4>相关问题</h4>
-      </div>
+
+        <!--右边内容-->
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>发起人</h4>
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object small-picture img-rounded" th:src="${question.user.avatarUrl}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">
+                            <span th:text="${question.user.name}"></span>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>相关问题</h4>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
