--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2 class="text-bigfont "><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 发现</h2>
             <hr>
-            <div class="media" th:each="question : ${pagination.questions}">
+            <div class="media" th:each="question : ${pagination.data}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object small-picture img-rounded" th:src="${question.user.avatarUrl}">
